reduce letter spacing when width < 700px, https://github.com/research-resource/research_resource/issues/218#issuecomment-296698046

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -172,6 +172,12 @@ a:hover {
 }
 
 /* Media Queries */
+@media (max-width: 700px) {
+  .link-header {
+    letter-spacing: 1px;
+  }
+}
+
 @media (min-height: 1250px) {
 .splash-image {
   bottom: -20%;
